[package]
name = "phonealert"
version = "0.1.0"
authors = ["Cyril Danilevski <cyril.danilevski@esrf.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.20"
reqwest = "0.10.0-alpha.1"
tokio = "1.18.5"
url = "2.1.0"
